--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Throttle</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div>
+      <button>Decrement</button>
+      <span>0</span>
+      <button>Increment</button>
+    </div>
+    <div>
+      <form>
+        <input type="text" />
+        <button id="search">Find</button>
+      </form>
+    </div>
     <script type="module" src="./index.js"></script>
-</body>
+    <script type="module" src="./debounce.js"></script>
+  </body>
 </html>
